--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,9 @@
 {
-  "extends": "react-app",
-  "plugins": [
-    "cypress"
-  ],
-  "env": {
-    "cypress/globals": true
-  },
+  "extends": ["react-app", "plugin:prettier/recomended"],
   "rules": {
+   
     "max-statements": ["error", 8],
     "max-depth": ["error", 4],
     "max-params": ["error", 3]
-  },
-  "globals": {
-    "cy": true
   }
 }
