--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4",
+    "prop-types": "^15.7.2",
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
